# Graph-TDA

./: .gitignore  .gitlab-ci.yml  README.md  pyproject.toml  set_dev_env.sh
AutoIRAD-datasets/: .gitignore  analcatdata_germangss.csv.dvc
Graph-TDA/: autoirad_datasets.py  data_utils.py  family_rma.csv  main.py  model.py
docs/: .gitignore  README.md  build.sh  conf.py  examples.rst  index.rst  tutorials.rst
docs/_static/css/: custom.css
docs/_templates/: README.md
docs/tutorials/: README.txt  sample.ipynb
