[project]
name = "Graph-TDA"
version = "0.1.0"
description = "description"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    {name = "Dawid64",email = "dawid.siera@gmail.com"},
    {name = "Tole-k", email = "anatol.kaczmarek@gmail.com"}
]
dependencies = [
    "palmerpenguins>=0.1.6",
    "pyballmapper>=0.3.7",
    "torch>=2.10.0",
    "torch-geometric>=2.7.0",
    "torch-geometric-temporal>=0.56.2",
    "torchvision>=0.25.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "ruff>=0.14.0",

    # docs
    "better-apidoc>=0.3.2",
    "myst-nb>=1.2.0",
    "pandoc>=2.4",
    "sphinx>=8.2.3",
    "sphinx-book-theme>=1.1.4",
    "sphinx-copybutton>=0.5.2",
]
[tool.uv.extra-build-dependencies]
torch-scatter = ["torch"]
torch-sparse = ["torch"]

[tool.setuptools.packages.find]
where = ["."]
include = ["Graph-TDA*"]

[tool.pytest.ini_options]
pythonpath = ["."]
